Добавил skeleton на страницу корзины

--- a/cart.html
+++ b/cart.html
@@ -2121,7 +2121,7 @@
                                             <div class="bx-soa-table-fade">
                                                 <table class="cart-table">
                                                     <tbody>
-                                                        <tr>
+                                                        <tr class="skeleton">
                                                             <td>
                                                                 <div class="cart-product">
                                                                     <div class="img-box">
@@ -2184,7 +2184,7 @@
                                                                 </div>
                                                             </td>
                                                         </tr>
-                                                        <tr>
+                                                        <tr class="skeleton">
                                                             <td>
                                                                 <div class="cart-product">
                                                                     <div class="img-box">
@@ -2254,7 +2254,7 @@
                                         </div>
                                     </div>
 
-                                    <div id="bx-soa-properties" class="bx-soa-section bx-active">
+                                    <div id="bx-soa-properties" class="bx-soa-section bx-active skeleton">
                                         <div class="bx-soa-section-title-container">
                                             <h2 class="bx-soa-section-title">
                                                 Шаг 1. Укажите данные получателя
@@ -2301,7 +2301,7 @@
                                         </div>
                                     </div>
 
-                                    <div id="bx-soa-region" class="bx-soa-section bx-active">
+                                    <div id="bx-soa-region" class="bx-soa-section bx-active skeleton">
                                         <div class="bx-soa-section-title-container">
                                             <h2 class="bx-soa-section-title">
                                                 Шаг 2. Выберите способ доставки
@@ -2348,7 +2348,7 @@
                                         </div>
                                     </div>
 
-                                    <div id="bx-soa-delivery" class="bx-soa-section bx-active bx-notitle">
+                                    <div id="bx-soa-delivery" class="bx-soa-section bx-active bx-notitle skeleton">
                                         <div class="bx-soa-section-title-container">
                                             <h2 class="bx-soa-section-title">
                                                 Доставка
@@ -2402,7 +2402,7 @@
                                         </div>
                                     </div>
 
-                                    <div id="bx-soa-paysystem" class="bx-soa-section bx-active">
+                                    <div id="bx-soa-paysystem" class="bx-soa-section bx-active skeleton">
                                         <div class="bx-soa-section-title-container">
                                             <h2 class="bx-soa-section-title col-lg-9">
                                                 Шаг 3. Выберите способ оплаты
@@ -2452,7 +2452,7 @@
                                         </div>
                                     </div>
 
-                                    <div id="order_comment" class="bx-soa-section bx-active bx-notitle"
+                                    <div id="order_comment" class="bx-soa-section bx-active bx-notitle skeleton"
                                         data-visited="true">
                                         <div class="bx-soa-section-title-container">
                                             <h2 class="bx-soa-section-title col-lg-9"><span
@@ -2483,7 +2483,7 @@
 
                             <aside id="bx-soa-total" class="col-lg-3">
                                 <div>
-                                    <div id="bx-soa-total-city">
+                                    <div id="bx-soa-total-city" class="skeleton">
                                         <!-- первая строчка была закомментирована, решил ее раскомментить и использовать как заголовок -->
                                         <div class="bx-soa-total-line">
                                             <div class="bx-soa-total-line-head">
@@ -2507,7 +2507,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="bx-soa-cart-total">
+                                    <div class="bx-soa-cart-total skeleton">
                                         <div class="bx-soa-cart-total-line" style="order: 0">
                                             <span class="bx-soa-cart-t">
                                                 Стоимость товаров
@@ -2549,7 +2549,7 @@
                                             <span class="bx-soa-cart-d">31 161 ₽</span>
                                         </div>
                                     </div>
-                                    <div id="bx-soa-orderSave">
+                                    <div id="bx-soa-orderSave" class="skeleton">
                                         <div class="checkbox">
                                             <label
                                                 data-bx-user-consent="{&quot;id&quot;:1,&quot;sec&quot;:&quot;12jlb4&quot;,&quot;autoSave&quot;:false,&quot;actionUrl&quot;:&quot;\/bitrix\/components\/bitrix\/main.userconsent.request\/ajax.php&quot;,&quot;replace&quot;:{&quot;button_caption&quot;:&quot;\u041e\u0444\u043e\u0440\u043c\u0438\u0442\u044c \u0437\u0430\u043a\u0430\u0437&quot;,&quot;fields&quot;:[&quot;\u0424\u0418\u041e&quot;,&quot;E-Mail&quot;,&quot;\u0422\u0435\u043b\u0435\u0444\u043e\u043d&quot;,&quot;\u0418\u043d\u0434\u0435\u043a\u0441&quot;,&quot;\u0413\u043e\u0440\u043e\u0434&quot;,&quot;\u0413\u043e\u0440\u043e\u0434&quot;,&quot;\u0410\u0434\u0440\u0435\u0441 \u0434\u043e\u0441\u0442\u0430\u0432\u043a\u0438&quot;,&quot;\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u043a\u043e\u043c\u043f\u0430\u043d\u0438\u0438&quot;,&quot;\u042e\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043a\u0438\u0439 \u0430\u0434\u0440\u0435\u0441&quot;,&quot;\u0418\u041d\u041d&quot;,&quot;\u041a\u041f\u041f&quot;,&quot;\u041a\u043e\u043d\u0442\u0430\u043a\u0442\u043d\u043e\u0435 \u043b\u0438\u0446\u043e&quot;,&quot;E-Mail&quot;,&quot;\u0422\u0435\u043b\u0435\u0444\u043e\u043d&quot;,&quot;\u0424\u0430\u043a\u0441&quot;,&quot;\u0418\u043d\u0434\u0435\u043a\u0441&quot;,&quot;\u0413\u043e\u0440\u043e\u0434&quot;,&quot;\u0413\u043e\u0440\u043e\u0434&quot;,&quot;\u0410\u0434\u0440\u0435\u0441 \u0434\u043e\u0441\u0442\u0430\u0432\u043a\u0438&quot;,&quot;IP-\u0430\u0434\u0440\u0435\u0441&quot;]},&quot;url&quot;:null,&quot;text&quot;:&quot;\u042f \u0434\u0430\u044e \u0441\u0432\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u0438\u0435 \u043d\u0430 \u043e\u0431\u0440\u0430\u0431\u043e\u0442\u043a\u0443 \u043c\u043e\u0438\u0445 \u043f\u0435\u0440\u0441\u043e\u043d\u0430\u043b\u044c\u043d\u044b\u0445 \u0434\u0430\u043d\u043d\u044b\u0445&quot;,&quot;submitEventName&quot;:&quot;bx-soa-order-save&quot;}"
@@ -2608,7 +2608,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div id="bx-soa-counpon">
+                                    <div id="bx-soa-counpon" class="skeleton">
                                         <div class="code-box">
                                             <div class="bx-soa-coupon-block">
                                                 <span class="bx-soa-coupon-item"></span>
