--- a/personal.html
+++ b/personal.html
@@ -1710,7 +1710,7 @@
                         <aside class="personal__aside">
                             <div class="personal__aside-items">
                                 <label class="personal__aside-item skeleton" tabindex="0">
-                                    <input type="radio" name="personal">
+                                    <input type="radio" name="personal" checked>
                                     Мой кабинет
                                 </label>
                                 <!-- <label class="personal__aside-item tile skeleton" tabindex="1">
@@ -1726,7 +1726,7 @@
                                     Личные данные
                                 </label>
                                 <label class="personal__aside-item tile skeleton" tabindex="1">
-                                    <input type="radio" name="personal" checked>
+                                    <input type="radio" name="personal" >
                                     История заказов
                                 </label>
                                 <label class="personal__aside-item tile skeleton" tabindex="1">
@@ -1780,7 +1780,7 @@
                             </div>
                         </aside>
 
-                        <div class="personal__item tile ">
+                        <div class="personal__item tile active">
                             <div class="personal__tiles">
                                 <!-- <div class="personal__tile skeleton">
                                     <svg width="100" height="100" viewBox="0 0 92 92" fill="none"
@@ -2135,7 +2135,7 @@
                             </form>
 
                         </div>
-                        <div class="personal__item personal__item--orders tile active">
+                        <div class="personal__item personal__item--orders tile ">
                             <div class="orders">
                                 <div class="order">
                                     <div class="order__header">
