--- a/contacts.html
+++ b/contacts.html
@@ -2451,7 +2451,7 @@
                                 </div>
 
                                 <a class="contacts-city__departments-download-template" download
-                                    href="./files/file.pdf">
+                                    href="">
                                     Скачать шаблон обращения
                                 </a>
                                 <button class="rect-btn rect-btn--departments blue">
@@ -2647,7 +2647,7 @@
                                 </div>
 
                                 <a class="contacts-city__departments-download-template" download
-                                    href="./files/file.pdf">
+                                    href="">
                                     Скачать шаблон обращения
                                 </a>
                                 <button class="rect-btn rect-btn--departments blue">
@@ -3395,7 +3395,7 @@
                     <div class="contacts-form__inner">
                         <div class="contacts-form-connect">
                             <label class="contacts-form-connect__label">
-                                <img src="./img/icons/complaint/viber.svg" alt="">
+                                <img src="./img/icons/contacts-tel.svg" alt="">
                                 <input type="checkbox">
                             </label>
                             <label class="contacts-form-connect__label">
@@ -3482,7 +3482,7 @@
                     <div class="contacts-form__inner">
                         <div class="contacts-form-connect">
                             <label class="contacts-form-connect__label">
-                                <img src="./img/icons/complaint/viber.svg" alt="">
+                                <img src="./img/icons/contacts-tel.svg" alt="">
                                 <input type="checkbox">
                             </label>
                             <label class="contacts-form-connect__label">
