--- a/index.html
+++ b/index.html
@@ -2202,6 +2202,48 @@
                 </div>
             </div>
 
+            <div class="main-title">
+                <div class="container">
+                    <div class="title title--center">
+                        <h1 class="skeleton">
+                            Продажа моек и встраиваемой бытовой техники
+                        </h1>
+                    </div>
+                    
+                </div>
+            </div>
+
+            <section class="benefits">
+                <div class="container">
+                    <div class="benefits__inner">
+                        <div class="benefits__item">
+                            <img src="./img/icons/benefits/1.svg" alt="">
+                            <p>
+                                Доставим любой товар из наличия сегодня
+                            </p>
+                        </div>
+                        <div class="benefits__item">
+                            <img src="./img/icons/benefits/2.svg" alt="">
+                            <p>
+                                Специальные условия и цены для производителей мебели
+                            </p>
+                        </div>
+                        <div class="benefits__item">
+                            <img src="./img/icons/benefits/3.svg" alt="">
+                            <p>
+                                Возможность посмотреть товар на складе до покупки
+                            </p>
+                        </div>
+                        <div class="benefits__item">
+                            <img src="./img/icons/benefits/4.svg" alt="">
+                            <p>
+                                Программы лояльности для дизайнеров в салонах мебели
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section class="popular">
                 <div class="container">
                     <div class="title title--center skeleton">
@@ -5986,6 +6028,56 @@
                 </div>
             </section>
 
+            <section class="about-main">
+                <div class="container">
+                    <div class="title">
+                        <h2>
+                            О компании Екром
+                        </h2>
+                        <p>
+                            Чем занимается группа компаний?
+                        </p>
+                    </div>
+                    <div class="about-main__text">
+                        <p>
+                            <b>Добро пожаловать в «Екром»</b> – вашу надежную компанию в сфере продажи кухонной
+                            сантехники и
+                            бытовой техники. Мы команда опытных специалистов, стремящихся обеспечить каждого клиентa
+                            высококачественной и доступной продукцией, которая идеально дополнит любую кухню. <br>
+                            Наша миссия заключается в том, чтобы каждый покупатель смог легко выбрать необходимые
+                            товары,
+                            основываясь на глубоком понимании потребностей девелоперов, интерьерных и архитектурных
+                            центров,
+                            а также местных производителей и продавцов мебели. Мы активно изучаем предпочтения наших
+                            клиентов, чтобы предлагать наиболее подходящие решения. <br>
+                            <b>Компания «Екром»</b> имеет три современных шоурума в двух регионах и обширные склады,
+                            полностью
+                            укомплектованные техникой, что позволяет нам оперативно реагировать на запросы клиентов.
+                            Наша
+                            команда уже более 15 лет предлагает только самые качественные товары, способные сделать
+                            жизнь
+                            комфортнее и технологичнее.
+                        </p>
+                    </div>
+                    <a class="about-main__img" href="./about.html">
+                        <img src="./img/about-bg.jpg" alt="">
+                    </a>
+                </div>
+            </section>
+
+            <section class="requests">
+                <div class="container">
+
+                    <a class="flamp-widget" href="//ekaterinburg.flamp.ru/firm/ekrom-1267165676722304"
+                        data-flamp-widget-type="responsive-new" data-flamp-widget-id="1267165676722304"
+                        data-flamp-widget-width="100%" data-flamp-widget-count="3">
+                        Отзывы о нас на Флампе
+                    </a>
+                    <script>!function (d, s) { var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s); js.async = 1; js.src = "//widget.flamp.ru/loader.js"; fjs.parentNode.insertBefore(js, fjs); }(document, "script");</script>
+
+                </div>
+            </section>
+
             <section class="faq">
                 <div class="container">
                     <div class="title title--center skeleton">
@@ -6072,6 +6164,8 @@
                     </button>
                 </div>
             </section>
+
+
 
         </main>
 
