--- a/personal.html
+++ b/personal.html
@@ -1726,7 +1726,7 @@
                                     Личные данные
                                 </label>
                                 <label class="personal__aside-item tile skeleton" tabindex="1">
-                                    <input type="radio" name="personal" >
+                                    <input type="radio" name="personal">
                                     История заказов
                                 </label>
                                 <label class="personal__aside-item tile skeleton" tabindex="1">
@@ -2179,7 +2179,114 @@
                                             </div>
                                             <div class="order__main-status">
                                                 Статус отгрузки:
-                                                <span class="status" style="background-color: #74747a;">Ожидает обработки</span>
+                                                <span class="status" style="background-color: #74747a;">Ожидает
+                                                    обработки</span>
+                                            </div>
+                                            <div class="order-buttons">
+                                                <a class="order-button" href="#">Подробнее о заказе</a>
+                                                <a class="order-button" href="#">Повторить заказ</a>
+                                                <a class="order-button" href="#">Отменить заказ</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="order">
+                                    <div class="order__header">
+                                        <div class="order__title">
+                                            Заказ №6432 от 22.03.2024, 2 товара на сумму 73 961 ₽
+                                        </div>
+                                        <button>
+                                            <svg width="17" height="10" viewBox="0 0 17 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                    d="M16.6619 2.04103L9.31619 9.64982C8.86542 10.1167 8.13458 10.1167 7.68381 9.64982L0.338077 2.04103C-0.112692 1.57411 -0.112692 0.817097 0.338078 0.350184C0.788849 -0.116729 1.51969 -0.116729 1.97046 0.350184L8.5 7.11355L15.0295 0.350185C15.4803 -0.116728 16.2112 -0.116728 16.6619 0.350185C17.1127 0.817098 17.1127 1.57411 16.6619 2.04103Z"
+                                                    fill="white" />
+                                            </svg>
+
+                                        </button>
+                                    </div>
+                                    <div class="order__main">
+                                        <div class="order__main-row">
+                                            <div class="order__main-name">
+                                                Оплата
+                                            </div>
+                                            <div class="order__main-info">
+                                                <span class="order-number">Счет №6739/1 от 22.03.2024,&nbsp;</span>
+                                                <span class="order-payment-method">Наличные курьеру</span>
+                                                <span class="status" style="background-color: #d44f68;">Отмена</span>
+                                            </div>
+                                            <div class="order__main-sum">
+                                                Сумма к оплате по счету: <span>73 961.20 ₽</span>
+                                            </div>
+                                            <a class="order-button">
+                                                Изменить способ оплаты
+                                            </a>
+                                        </div>
+                                        <div class="order__main-row">
+                                            <div class="order__main-name">
+                                                Доставка
+                                            </div>
+                                            <div class="order__main-info">
+                                                <span class="order-number">Отгрузка №6739/1,&nbsp;</span>
+                                                <span class="order-delivery-sum">Стоимость доставки 500 ₽</span>
+                                            </div>
+                                            <div class="order__main-status">
+                                                Статус отгрузки:
+                                                <span class="status" style="background-color: #74747a;">Ожидает
+                                                    обработки</span>
+                                            </div>
+                                            <div class="order-buttons">
+                                                <a class="order-button" href="#">Подробнее о заказе</a>
+                                                <a class="order-button" href="#">Повторить заказ</a>
+                                                <a class="order-button" href="#">Отменить заказ</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="order">
+                                    <div class="order__header">
+                                        <div class="order__title">
+                                            Заказ №6432 от 22.03.2024, 2 товара на сумму 73 961 ₽
+                                        </div>
+                                        <button>
+                                            <svg width="17" height="10" viewBox="0 0 17 10" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                    d="M16.6619 2.04103L9.31619 9.64982C8.86542 10.1167 8.13458 10.1167 7.68381 9.64982L0.338077 2.04103C-0.112692 1.57411 -0.112692 0.817097 0.338078 0.350184C0.788849 -0.116729 1.51969 -0.116729 1.97046 0.350184L8.5 7.11355L15.0295 0.350185C15.4803 -0.116728 16.2112 -0.116728 16.6619 0.350185C17.1127 0.817098 17.1127 1.57411 16.6619 2.04103Z"
+                                                    fill="white" />
+                                            </svg>
+
+                                        </button>
+                                    </div>
+                                    <div class="order__main">
+                                        <div class="order__main-row">
+                                            <div class="order__main-name">
+                                                Оплата
+                                            </div>
+                                            <div class="order__main-info">
+                                                <span class="order-number">Счет №6739/1 от 22.03.2024,&nbsp;</span>
+                                                <span class="order-payment-method">Наличные курьеру</span>
+                                                <span class="status" style="background-color: #d44f68;">Отмена</span>
+                                            </div>
+                                            <div class="order__main-sum">
+                                                Сумма к оплате по счету: <span>73 961.20 ₽</span>
+                                            </div>
+                                            <a class="order-button">
+                                                Изменить способ оплаты
+                                            </a>
+                                        </div>
+                                        <div class="order__main-row">
+                                            <div class="order__main-name">
+                                                Доставка
+                                            </div>
+                                            <div class="order__main-info">
+                                                <span class="order-number">Отгрузка №6739/1,&nbsp;</span>
+                                                <span class="order-delivery-sum">Стоимость доставки 500 ₽</span>
+                                            </div>
+                                            <div class="order__main-status">
+                                                Статус отгрузки:
+                                                <span class="status" style="background-color: #74747a;">Ожидает
+                                                    обработки</span>
                                             </div>
                                             <div class="order-buttons">
                                                 <a class="order-button" href="#">Подробнее о заказе</a>
