Добавил верстку отображения скидок на страницу товара; добавил блок преимуществ на главную страницу

--- a/index.html
+++ b/index.html
@@ -6065,6 +6065,41 @@
                 </div>
             </section>
 
+            <section class="benefits-main">
+                <div class="container">
+                    <div class="benefits-main__inner">
+                        <div class="benefits-main__item">
+                            <h3>
+                                2 филиала
+                            </h3>
+                            <p>
+                                В Екатеринбурге и Тюмени
+                            </p>
+                        </div>
+                        <div class="benefits-main__item">
+                            <h3>
+                                3 шоурума
+                            </h3>
+                            <p>
+                                С подключенной и готовой техникой
+                            </p>
+                        </div>
+                        <div class="benefits-main__item">
+                            <h3>
+                                50 брендов
+                            </h3>
+                            <p>Техники и сантехники</p>
+                        </div>
+                        <div class="benefits-main__item">
+                            <h3>
+                                15 лет
+                            </h3>
+                            <p>на рынке встраиваемой бытовой техники</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section class="requests">
                 <div class="container">
 
