--- a/product.html
+++ b/product.html
@@ -2249,11 +2249,27 @@
                                     <div class="product-box__price-header">
                                         <div class="product-box__cost">
                                             <div class="product-box__cost-type">
-                                                <p class="price">9 900 ₽</p>
+                                                <div class="product-box__cost-sale">
+                                                    <div class="product-box__cost-sale-label">
+                                                        -50%
+                                                    </div>
+                                                    <p class="product-box__cost-sale-old">
+                                                        19 800 ₽
+                                                    </p>
+                                                </div>
+                                                <p class="price price--sale">9 900 ₽</p>
                                                 <p class="price-type">Розничная цена</p>
                                             </div>
                                             <div class="product-box__cost-type">
-                                                <p class="price">8 900 ₽</p>
+                                                <div class="product-box__cost-sale">
+                                                    <div class="product-box__cost-sale-label">
+                                                        -50%
+                                                    </div>
+                                                    <p class="product-box__cost-sale-old">
+                                                        17 800 ₽
+                                                    </p>
+                                                </div>
+                                                <p class="price price--sale">8 900 ₽</p>
                                                 <p class="price-type">Ваша цена</p>
                                             </div>
                                         </div>
@@ -2720,11 +2736,27 @@
                             <div class="product-box__price-header">
                                 <div class="product-box__cost">
                                     <div class="product-box__cost-type">
-                                        <p class="price">9 900 ₽</p>
+                                        <div class="product-box__cost-sale">
+                                            <div class="product-box__cost-sale-label">
+                                                -50%
+                                            </div>
+                                            <p class="product-box__cost-sale-old">
+                                                19 800 ₽
+                                            </p>
+                                        </div>
+                                        <p class="price price--sale">9 900 ₽</p>
                                         <p class="price-type">Розничная цена</p>
                                     </div>
                                     <div class="product-box__cost-type">
-                                        <p class="price">8 800 ₽</p>
+                                        <div class="product-box__cost-sale">
+                                            <div class="product-box__cost-sale-label">
+                                                -50%
+                                            </div>
+                                            <p class="product-box__cost-sale-old">
+                                                17 800 ₽
+                                            </p>
+                                        </div>
+                                        <p class="price price--sale">8 800 ₽</p>
                                         <p class="price-type">Ваша цена</p>
                                     </div>
 
