--- a/action.html
+++ b/action.html
@@ -2048,11 +2048,11 @@
                             </h2>
                         </div>
                     </div>
-                    <div class="tags">
-                        <div class="tags__item skeleton blue current">
+                    <div class="tags tags--other">
+                        <div class="tags__item oval-btn skeleton blue current">
                             <a href="./action.html">Мойки</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./action.html">Смесители</a>
                         </div>
                     </div>
