--- a/actions.html
+++ b/actions.html
@@ -2017,7 +2017,7 @@
             </div>
         </header>
         <main>
-            <div class="info">
+            <div class="info info--actions">
                 <div class="container">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item breadcrumbs__item--home">
@@ -2046,14 +2046,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tags">
-                        <div class="tags__item skeleton blue current">
+                    <div class="tags tags--other">
+                        <div class="tags__item oval-btn skeleton blue current">
                             <a href="./actions.html">Все</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./actions.html">Техника</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./actions.html">Сантехника</a>
                         </div>
                     </div>
