--- a/brand.html
+++ b/brand.html
@@ -2082,17 +2082,17 @@
                             <li>Гарантия производителя 2 года.</li>
                         </ul>
                     </div>
-                    <div class="tags">
-                        <div class="tags__item skeleton blue current">
+                    <div class="tags tags--other">
+                        <div class="tags__item oval-btn skeleton blue current">
                             <a href="./brand.html">Все</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./brand.html">Мойки</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./brand.html">Смесители</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./brand.html">Дозаторы</a>
                         </div>
                     </div>
