--- a/brands.html
+++ b/brands.html
@@ -2045,17 +2045,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tags">
-                        <div class="tags__item skeleton blue current">
+                    <div class="tags tags--other">
+                        <div class="tags__item oval-btn skeleton blue current">
                             <a href="./brands.html">Все</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./brands.html">Техника</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./brands.html">Кухонная сантехника</a>
                         </div>
-                        <div class="tags__item skeleton blue">
+                        <div class="tags__item oval-btn skeleton blue">
                             <a href="./brands.html">Сантехника для ванной</a>
                         </div>
                     </div>
