--- a/category.html
+++ b/category.html
@@ -2207,6 +2207,14 @@
                                         <div class="filter-item range skeleton">
                                             <button class="filter-item__header">
                                                 Цена
+                                                <div class="hint">
+                                                    <div class="hint-btn">
+                                                        ?
+                                                    </div>
+                                                    <div class="hint-text">
+                                                        Это цена
+                                                    </div>
+                                                </div>
                                             </button>
                                             <div class="filter-item__props">
                                                 <ul class="filter-item__list">
@@ -2457,6 +2465,9 @@
                                                 <div class="progressbar-item current"></div>
                                                 <div class="progressbar-item"></div>
                                                 <div class="progressbar-item"></div>
+                                            </div>
+                                            <div class="hide-block">
+                                                Premium
                                             </div>
                                         </a>
 
