--- a/pdf-cart.html
+++ b/pdf-cart.html
@@ -247,6 +247,10 @@
         .footer-list li:last-child .name span {
             color: #888;
         }
+
+        main {
+            padding: 0 20px;
+        }
     </style>
 </head>
 
