--- a/favorites.html
+++ b/favorites.html
@@ -8362,16 +8362,14 @@
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="./personal.html">
+                <a href="./catalog.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M9 9C11.0711 9 12.75 7.32107 12.75 5.25C12.75 3.17893 11.0711 1.5 9 1.5C6.92893 1.5 5.25 3.17893 5.25 5.25C5.25 7.32107 6.92893 9 9 9Z"
-                            stroke="white" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" />
-                        <path
-                            d="M15.4426 16.5C15.4426 13.5975 12.5551 11.25 9.00011 11.25C5.44511 11.25 2.55762 13.5975 2.55762 16.5"
-                            stroke="white" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M15.9894 17.9999H11.9094C10.7994 17.9999 9.89941 17.0999 9.89941 15.9899V10.4999C9.89941 10.1699 10.1694 9.8999 10.4994 9.8999H15.9894C17.0994 9.8999 17.9994 10.7999 17.9994 11.9099V15.9899C17.9994 17.0999 17.0994 17.9999 15.9894 17.9999ZM11.0994 11.0999V15.9899C11.0994 16.4399 11.4594 16.7999 11.9094 16.7999H15.9894C16.4394 16.7999 16.7994 16.4399 16.7994 15.9899V11.9099C16.7994 11.4599 16.4394 11.0999 15.9894 11.0999H11.0994Z" fill="white"></path>
+                        <path d="M6.09 17.9999H2.01C0.9 17.9999 0 17.0999 0 15.9899V11.9099C0 10.7999 0.9 9.8999 2.01 9.8999H7.5C7.83 9.8999 8.1 10.1699 8.1 10.4999V15.9899C8.1 17.0999 7.2 17.9999 6.09 17.9999ZM2.01 11.0999C1.56 11.0999 1.2 11.4599 1.2 11.9099V15.9899C1.2 16.4399 1.56 16.7999 2.01 16.7999H6.09C6.54 16.7999 6.9 16.4399 6.9 15.9899V11.0999H2.01Z" fill="white"></path>
+                        <path d="M15.9894 8.1H10.4994C10.1694 8.1 9.89941 7.83 9.89941 7.5V2.01C9.89941 0.9 10.7994 0 11.9094 0H15.9894C17.0994 0 17.9994 0.9 17.9994 2.01V6.09C17.9994 7.2 17.0994 8.1 15.9894 8.1ZM11.0994 6.9H15.9894C16.4394 6.9 16.7994 6.54 16.7994 6.09V2.01C16.7994 1.56 16.4394 1.2 15.9894 1.2H11.9094C11.4594 1.2 11.0994 1.56 11.0994 2.01V6.9Z" fill="white"></path>
+                        <path d="M7.5 8.1H2.01C0.9 8.1 0 7.2 0 6.09V2.01C0 0.9 0.9 0 2.01 0H6.09C7.2 0 8.1 0.9 8.1 2.01V7.5C8.1 7.83 7.83 8.1 7.5 8.1ZM2.01 1.2C1.56 1.2 1.2 1.56 1.2 2.01V6.09C1.2 6.54 1.56 6.9 2.01 6.9H6.9V2.01C6.9 1.56 6.54 1.2 6.09 1.2H2.01Z" fill="white"></path>
                     </svg>
-                    <span>Кабинет</span>
+                    <span>Каталог</span>
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
@@ -8394,7 +8392,7 @@
                 </a>
                 <span class="mobile-counter">15</span>
             </li>
-            <li class="mobile-bottom-menu__item active">
+            <li class="mobile-bottom-menu__item">
                 <a href="./favorites.html">
                     <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
