Скрытые товары в карточке

--- a/product.html
+++ b/product.html
@@ -2124,6 +2124,9 @@
                                 </div>
 
                                 <div class="swiper slider-product">
+                                    <div class="hide-block">
+                                        Premium
+                                    </div>
                                     <img class="country lazyload" src="./img/icons/countries/italy.svg" alt="">
                                     <div class="swiper-wrapper slider-product-wrapper">
                                         <div class="swiper-slide slider-product-slide">
