--- a/category.html
+++ b/category.html
@@ -5366,7 +5366,7 @@
                                     </div>
                                 </div>
                                 <div class="promo-banner promo-banner--category skeleton"
-                                    style="background-image: url('./img/catalog-banner.png');">
+                                    >
                                     <p class="catalog-popup__categories-text">
                                         Не можете выбрать?
                                     </p>
@@ -5376,6 +5376,7 @@
                                     <button class="rect-btn rect-btn--catalog-popup glass feedback">
                                         Связаться с нами
                                     </button>
+                                    <img src="./img/catalog-banner.png" alt="">
                                 </div>
                                 <div class="product-card">
 
