--- a/product.html
+++ b/product.html
@@ -2999,6 +2999,28 @@
                         </div>
 
                         <div class="product-info__item documentation">
+                            <div class="product-info__brand">
+                                <h5 class="product-info__brand-title">
+                                    Ваш персональный менеджер бренда "ASKO"
+                                </h5>
+                                <div class="product-info__brand-content">
+                                    <div class="product-info__brand-photo">
+                                        <img src="./img/tigran.jpg" alt="">
+                                    </div>
+                                    <div class="product-info__brand-text">
+                                        <p class="product-info__brand-name">
+                                            Алишанян Тигран
+                                        </p>
+                                        <p class="product-info__brand-info-text">
+                                            Свяжитесь и получите подробную информацию о товаре
+                                        </p>
+                                        <a class="product-info__brand-phone" href="tel:+79221168694">
+                                            +7(922) 116-86-94
+                                        </a>
+                                    </div>
+                                </div>
+                                <img class="product-info__brand-img" src="./img/asko.svg" alt="">
+                            </div>
                             <h4 class="product-info__title ">
                                 Документация
                             </h4>
