--- a/pdf-cart.html
+++ b/pdf-cart.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/cart-pdf.css">
     <style>
         @font-face {
             font-family: 'Rubik';
@@ -248,8 +249,143 @@
             color: #888;
         }
 
-        main {
+        main,
+        .visit,
+        .footer {
             padding: 0 20px;
+        }
+
+        .visit__inner {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            padding: 18px 20px 25px 20px;
+            margin-top: 35px;
+            background: #27282B;
+            border-radius: 10px;
+        }
+
+        .visit__inner-left {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .visit__inner-manager {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .visit__inner-manager-avatar {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: #ccc;
+        }
+
+        .visit__inner-manager-info {}
+
+        .manager-info-name {
+            color: #fff;
+            font-size: 14px;
+        }
+
+        .manager-info-job-title {
+            color: #888;
+            font-size: 12px;
+        }
+
+        .visit-contact {
+            display: flex;
+            gap: 5px;
+        }
+
+        .visit-contact:not(:first-child) {
+            margin-top: 7px;
+        }
+
+        .visit-contact .name {
+            width: 65px;
+        }
+
+        .visit-contact .name,
+        .visit-contact .value {
+            font-size: 14px;
+            color: #888;
+        }
+
+        .visit-contact .value {
+            color: #fff;
+        }
+
+        .visit__inner-right {
+            position: relative;
+            padding: 10px 16px 10px 13px;
+            background: #d9d9d9;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .cube-1,
+        .cube-2 {
+            position: absolute;
+            background: #fff;
+            border-radius: 10px;
+            opacity: 0.36;
+            z-index: 0;
+        }
+
+        .cube-1 {
+            left: 25px;
+            bottom: -14px;
+            width: 68px;
+            height: 68px;
+            transform: rotate(60deg);
+        }
+
+        .cube-2 {
+            top: -10px;
+            right: 3px;
+            width: 84px;
+            height: 84px;
+            transform: rotate(-60deg);
+        }
+
+        .visit__inner-city {
+            display: inline-block;
+            border-radius: 5px;
+            font-size: 12px;
+            padding: 3px 5px;
+            font-weight: 500;
+            background: #0b4250;
+            color: #fff;
+        }
+
+        .visit__inner-right ul {
+            position: relative;
+            z-index: 1;
+            margin-top: 5px;
+        }
+
+        .visit__inner-right ul li {
+            display: flex;
+            gap: 4px;
+        }
+
+        .visit__inner-right ul li:not(:first-child) {
+            margin-top: 7px;
+        }
+
+        .visit__inner-right ul li a {
+            font-size: 14px;
+            color: #052b34;
+        }
+
+        .watermark {
+            display: flex;
+            justify-content: center;
+            width: 100%;
         }
     </style>
 </head>
@@ -267,11 +403,12 @@
             </div>
 
         </header>
+
         <main>
             <div class="cart-content">
                 <p class="cart-title">
-                    Корзина от <span class="cart-date">22.03.2024</span>&nbsp;<span class="cart-tiem">11:04</span>&nbsp;(<span
-                        class="cart-city">г. Екатеринбург</span>)
+                    Корзина от <span class="cart-date">22.03.2024</span>&nbsp;<span
+                        class="cart-tiem">11:04</span>&nbsp;(<span class="cart-city">г. Екатеринбург</span>)
                 </p>
                 <div class="cart-products">
                     <div class="cart-row">
@@ -401,7 +538,8 @@
                 </div>
             </div>
         </main>
-        <footer>
+
+        <div class="footer">
             <div class="footer-inner">
                 <p class="footer-info">Стоимость товаров актуальна на момент печати&nbsp;<span
                         class="date">22.03.2024</span>&nbsp;<span class="time">11:04</span></p>
@@ -420,7 +558,78 @@
                     </li>
                 </ul>
             </div>
-        </footer>
+        </div>
+
+        <div class="visit">
+            <div class="visit__inner">
+                <div class="visit__inner-left">
+                    <div class="visit__inner-manager">
+                        <div class="visit__inner-manager-avatar">
+                            <img src="" alt="">
+                        </div>
+                        <div class="visit__inner-manager-info">
+                            <p class="manager-info-name">
+                                Сурнин Антон Андреевич
+                            </p>
+                            <p class="manager-info-job-title">
+                                Менеджер
+                            </p>
+                        </div>
+                    </div>
+                    <div class="visit__inner-contacts">
+                        <div class="visit-contact">
+                            <p class="name">
+                                Почта:
+                            </p>
+                            <a class="value" href="mailto:ema@ekrom.ru">
+                                ema@ekrom.ru
+                            </a>
+                        </div>
+                        <div class="visit-contact">
+                            <p class="name">
+                                Телефон:
+                            </p>
+                            <a class="value" href="tel:+79961755816">
+                                +7 (996) 175-58-16
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="visit__inner-right">
+                    <div class="cube-1"></div>
+                    <div class="cube-2"></div>
+                    <p class="visit__inner-city">
+                        Екатеринбург
+                    </p>
+                    <ul>
+                        <li>
+                            <img src="./img/icons/pin.svg" alt="">
+                            <a
+                                href="https://yandex.ru/maps/54/yekaterinburg/house/ulitsa_karla_libknekhta_22/YkkYcAZiSUYBQFtsfXR1cXRrZg==/?indoorLevel=1&ll=60.612036%2C56.840882&z=17.25">
+                                ул. Карла Либкнехта 22, офис 419
+                            </a>
+                        </li>
+                        <li>
+                            <img src="./img/icons/pin.svg" alt="">
+                            <a
+                                href="http://yandex.ru/maps/org/yekrom/3533030326/?indoorLevel=5&ll=60.574055%2C56.838204&z=17.19">
+                                ВИЗ бульвар 13, 5 этаж, корпус А
+                            </a>
+                        </li>
+                        <li>
+                            <img src="./img/icons/pin.svg" alt="">
+                            <a href="https://yandex.ru/maps/org/yekrom/144772895479/?ll=60.625906%2C56.816637&z=17.19">
+                                ул. Цвиллинга 1, 9 этаж, корпус Б
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="watermark">
+            <img src="./img/watermark.svg" alt="">
+        </div>
     </div>
 </body>
 
